deploy/kubernetes/base/postfix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  labels:
    app: postfix
spec:
  replicas: 1
  selector:
    matchLabels:
        app: postfix
  template:
    metadata:
      labels:
        app: postfix
    spec:
      containers:
      - name: postfix
        image: boky/postfix
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "100Mi"
            ephemeral-storage: 200Mi
          limits:
            cpu: "100m"
            memory: "200Mi"
            ephemeral-storage: 2Gi
#        volumeMounts:
#          - name: dkim-keys
#            mountPath: "/etc/opendkim/keys"
#            readOnly: true
#      volumes:
#      - name: dkim-keys
#        secret:
#          secretName: postfix-dkim-keys
