deploy/kubernetes/base/postfix/postfix.yaml
---
# Source: mail/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "postfix-mail"
  labels:
    helm.sh/chart: mail-v3.5.1
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: postfix
    app.kubernetes.io/version: "v3.5.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 587
      targetPort: smtp
      protocol: TCP
      name: smtp
      
  selector:
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: postfix
---
# Source: mail/templates/statefulset.yaml
apiVersion: apps/v1
kind: "StatefulSet"
metadata:
  name: "postfix-mail"
  labels:
    helm.sh/chart: mail-v3.5.1
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: postfix
    app.kubernetes.io/version: "v3.5.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    # Auto-reload postfix if somebody changes config map directly in Kuberentes.
    # Uses: https://github.com/stakater/Reloader
    configmap.reloader.stakater.com/reload: "postfix-mail"
spec:
  serviceName: postfix-mail
  
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mail
      app.kubernetes.io/instance: postfix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mail
        app.kubernetes.io/instance: postfix
      annotations:
        # https://keel.sh/docs/#helm-same-tag-force-updates
        # Current consensus on a best way to "force" update Helm releases is by modifying your pod spec template by adding:
        date/deploy-date: "2022-11-10 18:25:26.568970562 +0100 CET m=+0.109919409"
        # Reload for Statefulset when configmap changes on deployment
        checksum/configmap: ebf305d467ca4f4a5b9a735533505535ce64c292263746931a9652dd4a6d27d3
    spec:
      serviceAccountName: "postfix-mail"
      
      
      
      
      
      
      

      # Allow up to 2 minutes for Postfix to flush / empty the queue  before shutting down the container
      terminationGracePeriodSeconds: 120
      containers:
        - name: mail
          image: "boky/postfix:v3.5.1"
          imagePullPolicy: IfNotPresent
          securityContext:            {}
          ports:
            - name: smtp
              containerPort: 587
              protocol: TCP
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - '[ ! -f /tmp/container_is_terminating ] && printf "EHLO healthcheck\n" | nc 127.0.0.1
                587 | grep -qE "^220.*ESMTP Postfix"'
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 60
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - ps axf | fgrep -v grep | egrep -q '\{supervisord\}|/usr/bin/supervisord' && ps
                axf | fgrep -v grep | egrep -q '(/usr/lib/postfix/sbin/|/usr/libexec/postfix/)master'
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            exec:
              command:
              - sh
              - -c
              - ps axf | fgrep -v grep | egrep -q '\{supervisord\}|/usr/bin/supervisord' && ps
                axf | fgrep -v grep | fgrep -q "postfix-script" && ps axf | fgrep -v grep | fgrep
                -q 'opendkim.sh'
            failureThreshold: 12
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            # If a container has a preStop hook configured, that runs before the container enters the Terminated state.
            preStop:
              exec:
                command:
                  - bash
                  - -c
                  - touch /tmp/container_is_terminating && while ! [[ "`mailq`" == *empty* ]]; do echo "Flushing queue..." && postfix flush; sleep 1; done
          volumeMounts:
            - mountPath: /var/spool/postfix
              name: postfix-mail
            - mountPath: /var/spool/postfix/private
              name: private
            - mountPath: /var/spool/postfix/public
              name: public
          resources: 
            limits:
              cpu: 200m
              memory: 400Mi
            requests:
              cpu: 50m
              memory: 200Mi
      volumes:
        # Socket directories
        - name: public
          emptyDir: {}
        - name: private
          emptyDir: {}
        - name: postfix-mail
          emptyDir: {}
