deploy/kubernetes/base/postfix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfix
  labels:
    app: postfix
spec:
  ports:
  - port: 587
    targetPort: 587
  selector:
    app: postfix
