deploy/kubernetes/base/postfix/networkpolicy.yaml
# This is a firewall whitelist for traffic into and between the kubegres pods
# See https://kubernetes.io/docs/concepts/services-networking/network-policies/

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postfix
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mail
      app.kubernetes.io/instance: postfix
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: tmeit-worker
      ports:
        - protocol: TCP
          port: 587
